--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,8 @@ a:hover{
     right: 630px; */
     position: absolute;
     margin-top: 25px;
-    margin-left: 0px;
-    right: 580px;
+    margin-left: auto;
+    right: auto;
     background: #11cdd4;
     background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
     background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
